# olas-nmp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  justfile  skills-lock.json
android/app/: build.gradle.kts
apps/android/: settings.gradle.kts
apps/android/Components/Auth/: AmberIntentCodec.kt  ExternalSignerCapabilityBridge.kt  ExternalSignerWire.kt  KnownSigners.generated.kt  NostrLoginBlock.kt
apps/android/Components/NostrContent/: ContentTreeWire.kt  NostrContentGrouping.kt  NostrContentRenderer.kt  NostrContentView.kt  NostrMediaGrid.kt  NostrMentionChip.kt  NostrQuoteCard.kt
apps/android/Components/NostrUser/: NostrAvatar.kt  NostrNip05Badge.kt  NostrProfileHost.kt  NostrProfileName.kt  NostrUserCard.kt  ProfileWire.kt
apps/android/app/: build.gradle.kts
apps/ios/: ExportOptions.plist  project.yml
apps/ios/Components/: ProfileComponents.swift
apps/ios/Components/Auth/: KnownSigners.generated.swift  NostrLoginBlock.swift
apps/ios/Components/ImageLoading/: BlurHashDecoder.swift  CachedImage.swift
apps/ios/Components/NostrContent/: ContentTreeWire.swift  NostrContentGrouping.swift  NostrContentRenderer.swift  NostrContentView.swift  NostrMediaGrid.swift  NostrMentionChip.swift  NostrMinimalContentView.swift  NostrQuoteCard.swift
apps/ios/Components/NostrRelays/: NostrRelayList.swift
apps/ios/Components/NostrUser/: NostrAvatar.swift  NostrNip05Badge.swift  NostrProfileHost.swift  NostrProfileName.swift  NostrUserCard.swift  ProfileWire.swift
apps/ios/Components/SwiftUI/: RenderIdentifiable.swift
apps/ios/Olas/: Info.plist  Olas.entitlements
apps/ios/Olas/App/: OlasApp.swift
apps/ios/Olas/Bridge/: module.modulemap  olas_app.h
apps/ios/Olas/Compose/: CameraView.swift  CaptionView.swift  ComposeNavigator.swift  EditPhotoView.swift  FilterCarouselView.swift  PhotoPickerView.swift  UploadMiniPlayer.swift  UploadViewModel.swift
apps/ios/Olas/Core/: ImageDisplayMetrics.swift  Models.swift  NMPBridge.swift  NMPBridgeActions.swift  NMPBridgeCallbacks.swift  NMPBridgeCatalogs.swift  NostrProfileComponents.swift  OlasHaptics.swift  Theme.swift  UploadQueue.swift
apps/ios/Olas/Features/: ContentView.swift
apps/ios/Olas/Feed/: FeedView.swift  FeedViewModel.swift  FullscreenImageView.swift  PostCardActionsView.swift  PostCardHeaderView.swift  PostCardView.swift
apps/ios/Olas/Notifications/: NotificationItemView.swift  NotificationsView.swift
apps/ios/OlasTests/: OlasTests.swift
apps/ios/OlasUITests/: OlasTestDrive.swift  OlasUITests.swift
apps/olas/nmp-app-olas/: Cargo.toml
apps/olas/nmp-app-olas/src/: actions.rs  app.rs  config_ffi.rs  event_models.rs  extras.rs  extras_ffi.rs  extras_state.rs  follow_packs.rs  follow_packs_model.rs  identity_ffi.rs  invites.rs  jni.rs  jni_action_exports.rs  jni_event_models.rs  jni_extras.rs  jni_follow_packs.rs  jni_p3_exports.rs  jni_photo_feed.rs  jni_runtime_exports.rs  lib.rs  location.rs  notifications.rs  photo_feed.rs  photo_feed_tests.rs  picture_feed.rs  picture_feed_acquisition.rs  picture_feed_admission.rs  picture_feed_projection.rs  picture_feed_search.rs  picture_feed_slots.rs  picture_feed_test_support.rs  picture_feed_tests.rs  snapshots.rs  social.rs  zaps.rs
apps/relay/: go.mod  main.go
docs/design/: onboarding-flow.md  ux-improvements-backlog.md  visual-system.md
docs/motion/: 00-foundations.md  01-feed-scroll.md  02-image-open-close.md  03-reactions-and-zaps.md  04-publish-flow.md  04b-sound-design.md  05-navigation-and-chrome.md  06-loading-and-feedback.md  07-video.md  08-polish-moments.md  08b-surfaces-and-chrome.md  09-text-inputs-settings.md  10-empty-states.md  11-transition-completion.md  README.md
docs/spec/: features.md  flows.md  media.md  overview.md  wot.md
docs/wiki/: _index.md
docs/wiki/episodes/: 2026-06-19-1-adr-0053-projection-consumption-crash-root.md  2026-06-19-1-ios-android-feature-parity-enforced-as.md  2026-06-19-1-ios-android-strict-feature-parity-doctrine.md  2026-06-19-1-nmp-app-olas-must-be-thin.md  2026-06-19-1-nmp-boundary-nmp-app-olas-must.md  2026-06-19-1-nmp-delegation-replaces-local-reimplementation.md  2026-06-19-1-olas-layout-restructured-from-root-level.md  2026-06-19-1-olas-pivoted-from-nip-29-group.md  2026-06-19-1-olas-pivots-from-nip-29-communities.md  2026-06-19-1-pivot-from-nip-29-communities-to.md  2026-06-19-1-pivot-from-nip-29-private-communities.md  2026-06-19-2-adr-0053-nmp-app-consume-all.md  2026-06-19-2-exif-stripping-and-geohash-only-location.md  2026-06-19-2-nmp-architecture-doctrine-nmp-app-olas.md  2026-06-19-2-nmp-boundary-protection-no-hacking-around.md  2026-06-19-2-nmp-gap-handling-doctrine-validate-upstream.md  2026-06-19-2-nmp-wot-boundary-doctrine-gaps-must.md  2026-06-19-2-olas-governance-doctrines-mandatory-ios-android.md  2026-06-19-2-onboarding-uses-nip-51-follow-packs.md  2026-06-19-2-progressive-disclosure-nostr-protocol-vocabulary-hidden.md  2026-06-19-2-project-layout-restructured-to-apps-monorepo.md  2026-06-19-3-background-upload-miniplayer-replaces-blocking-compose.md  2026-06-19-3-ios-android-strict-feature-parity-enforced.md  2026-06-19-3-seamless-account-creation-hides-nostr-key.md  2026-06-19-3-wot-gap-handling-doctrine-no-local.md  2026-06-19-3-wot-scoring-unavailable-network-feed-shown.md  2026-06-19-3-zero-stubs-doctrine-real-relays-real.md  2026-06-19-4-native-tabview-replaces-custom-olastabbar-for.md  2026-06-19-4-seamless-account-creation-username-olas-app.md  2026-06-19-5-ios-upload-pipeline-unified-to-canonical.md
docs/wiki/guides/: ai-workflow-patterns.md  android-platform.md  architecture.md  code-size-limits.md  cross-platform-parity.md  image-filters.md  ios-platform.md  media-server-config.md  nmp-app-overview.md  nostr-protocol.md  onboarding.md  post-interactions.md  product-vision.md  progressive-disclosure.md  relay-deployment.md  ui-design-system.md  wot-and-feed-filtering.md
docs/wiki/nouns/: realness.jsonl
docs/wiki/research/: 2026-06-19-1-pert-workflow-review-report-boundary-and.md
ios/Olas/Olas/App/: OlasApp.swift
mockup/: index.html  vercel.json
relay/: AGENTS.md
(+99 files in other folders)
