[workspace]
members = [
    "apps/olas/nmp-app-olas",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/pablof7z/olas"
version = "0.1.0"

# NMP crates: consumed from NMP `master` via git so Olas always tracks the
# moving upstream branch rather than a frozen rev. Cargo records the exact
# resolved commit in `Cargo.lock`; bump it deliberately with `cargo update -p
# <crate>`.
[workspace.dependencies]
nmp-core        = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-defaults    = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-ffi         = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-blossom     = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-feed        = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip57       = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip02       = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip68       = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-nip92-types = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-planner     = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }
nmp-wot         = { version = "0.8.0", git = "https://github.com/pablof7z/nostr-multi-platform.git", branch = "master" }

nostr      = "0.44"
serde      = "1.0"
serde_json = "1.0"
jni        = { version = "0.21", features = ["invocation"] }
