[package]
name = "nmp-app-olas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Olas app glue — app-specific Rust logic and C-ABI FFI for iOS/Android shells."

[lib]
name = "nmp_app_olas"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["lmdb-backend"]
lmdb-backend = ["nmp-core/lmdb-backend"]

[dependencies]
nmp-core.workspace = true
nmp-defaults.workspace = true
nmp-ffi.workspace = true
nmp-blossom.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
