[package]
name = "nmp-app-olas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Olas app glue — app-specific Rust logic and C-ABI FFI for iOS/Android shells."

[lib]
name = "nmp_app_olas"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["lmdb-backend"]
lmdb-backend = ["nmp-core/lmdb-backend"]

[dependencies]
nmp-core.workspace = true
nmp-defaults.workspace = true
nmp-ffi.workspace = true
nmp-blossom.workspace = true
nmp-feed.workspace = true
nmp-nip02.workspace = true
nmp-nip57.workspace = true
nmp-nip68.workspace = true
nmp-planner.workspace = true
nmp-wot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
nmp-ffi = { workspace = true, features = ["test-support"] }
nostr.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
